Bug 14137 - buildok/netfilter02.stp not ok
Summary: buildok/netfilter02.stp not ok
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Chris Meek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-23 11:30 UTC by Mark Wielaard
Modified: 2012-05-23 16:40 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Wielaard 2012-05-23 11:30:27 UTC
Host: Linux toonder.wildebeest.org 3.3.6-3.fc16.x86_64 #1 SMP Wed May 16 21:43:01 UTC 2012 x86_64 x86_64 x86_64 GNU/Linux
Snapshot: version 1.8/0.153 commit release-1.7-249-g57db0e6
GCC: 4.6.3 [gcc (GCC) 4.6.3 20120306 (Red Hat 4.6.3-2)]
Distro: Fedora release 16 (Verne)

Running /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp
starting /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp
spawn1 stap -p4 /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp
spawn stap -p4 /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp
WARNING: side-effect-free probe 'probe_2009': keyword at /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp:4:1
 source: probe netfilter.hook("NF_INET_PRE_ROUTING").pf("NFPROTO_IPV4").priority("1") { }
         ^
WARNING: side-effect-free probe 'probe_2010': keyword at :5:1
WARNING: side-effect-free probe 'probe_2009': keyword at /home/mark/src/systemtap/testsuite/buildok/netfilter02.stp:4:1

 source: probe netfilter.hook("NF_INET_PRE_ROUTING").pf("NFPROTO_IPV4").priority("1") { }

         ^

WARNING: side-effect-free probe 'probe_2010': keyword at :5:1
 source: probe netfilter.hook("NF_INET_PRE_ROUTING").pf("NFPROTO_IPV4") { }
         ^

 source: probe netfilter.hook("NF_INET_PRE_ROUTING").pf("NFPROTO_IPV4") { }

         ^
/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:231:21: error: redefinition of 'enter_netfilter_probe_probe_2009'
/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:106:21: note: previous definition of 'enter_netfilter_probe_probe_2009' was here

/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:231:21: error: redefinition of 'enter_netfilter_probe_probe_2009'

/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:106:21: note: previous definition of 'enter_netfilter_probe_probe_2009' was here
/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:349:27: error: redefinition of 'netfilter_opts_probe_2009'
/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:224:27: note: previous definition of 'netfilter_opts_probe_2009' was here

/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:349:27: error: redefinition of 'netfilter_opts_probe_2009'

/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.c:224:27: note: previous definition of 'netfilter_opts_probe_2009' was here
make[4]: *** [/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.o] Error 1

make[4]: *** [/tmp/stapTNRaVj/stap_ed0c182d855bb272214e55124b74424b_883_src.o] Error 1
make[3]: *** [_module_/tmp/stapTNRaVj] Error 2

make[3]: *** [_module_/tmp/stapTNRaVj] Error 2
WARNING: make exited with status: 2
Pass 4: compilation failed.  Try again with another '--vp 0001' option.
WARNING: make exited with status: 2


Pass 4: compilation failed.  Try again with another '--vp 0001' option.
wait results: 30850 exp24 0 1
FAIL: buildok/netfilter02.stp
Comment 1 Serguei Makarov 2012-05-23 13:41:29 UTC
Yes, this is a known bug, which is why there's a test for it. There's some kind of extremely subtle issue with how derived probes are named.
Comment 2 Serguei Makarov 2012-05-23 13:46:46 UTC
Yes, this is a known bug, which is why there's a test for it. There's some kind of extremely subtle issue with how derived probes are named. It is probably possible to bypass it with a complicated solution (such as defining a special tick counter for naming the netfilter hook functions). However, something like that will only be a last resort if for some reason we can't get the simple solution to work...
Comment 3 Frank Ch. Eigler 2012-05-23 16:40:06 UTC
commit ddbda7e