PR14137: tolerate duplicate netfilter hook probe handlers

translate.cxx may model duplicate probe handlers by changing multiple
*_derived_probe ->name's to the same string, which upsets
tapset-netfilter.cxx code generation.  Use an index for the contexts
where required.

* tapset-netfilter.cxx (netfilter_derived_probe ctor): Assign unique
  nf_filter index.
  (emit_module_decls, emit_module_init, emit_module_exit): Use when
  appropriate.